@@ -723,8 +723,10 @@ public final class plasmaSwitchboard extends serverAbstractSwitch<IndexingStack.
         // clean search events which have cached relations to the old index
         plasmaSearchEvent.cleanupEvents(true);
         // switch the networks
-        synchronized (this.webIndex) {
-            this.webIndex.close();
+        synchronized (this) {
+            synchronized (this.webIndex) {
+                this.webIndex.close();
+            }
             setConfig("network.unit.definition", networkDefinition);
             overwriteNetworkDefinition(this);
             final File indexPrimaryPath = getConfigPath(plasmaSwitchboardConstants.INDEX_PRIMARY_PATH, plasmaSwitchboardConstants.INDEX_PATH_DEFAULT);
@@ -1685,7 +1687,7 @@ public final class plasmaSwitchboard extends serverAbstractSwitch<IndexingStack.
         if (System.currentTimeMillis() - lastPPMUpdate > 30000) {
             // we don't want to do this too often
             updateMySeed();
-            serverProfiling.update("ppm", new Long(currentPPM()));
+            serverProfiling.update("ppm", Long.valueOf(currentPPM()));
             lastPPMUpdate = System.currentTimeMillis();
         }
         serverProfiling.update("indexed", queueEntry.url().toNormalform(true, false));
@@ -1870,7 +1872,7 @@ public final class plasmaSwitchboard extends serverAbstractSwitch<IndexingStack.
     	final long timeInterval = 1000 * 60 * 60;
     	final TreeSet<Long> accessSet = tracker.get(host);
     	if (accessSet == null) return 0;
-    	return accessSet.tailSet(new Long(System.currentTimeMillis() - timeInterval)).size();
+    	return accessSet.tailSet(Long.valueOf(System.currentTimeMillis() - timeInterval)).size();
     }
     
     public void startTransferWholeIndex(final yacySeed seed, final boolean delete) {
@@ -2197,7 +2199,7 @@ public final class plasmaSwitchboard extends serverAbstractSwitch<IndexingStack.
                         while (enu.hasNext()) {
                             ys = yacySeed.genRemoteSeed(enu.next(), null, false);
                             if ((ys != null) &&
-                                ((!webIndex.seedDB.mySeedIsDefined()) || (webIndex.seedDB.mySeed().hash != ys.hash))) {
+                                ((!webIndex.seedDB.mySeedIsDefined()) || !webIndex.seedDB.mySeed().hash.equals(ys.hash))) {
                                 if (webIndex.peerActions.connectPeer(ys, false)) lc++;
                                 //seedDB.writeMap(ys.hash, ys.getMap(), "init");
                                 //System.out.println("BOOTSTRAP: received peer " + ys.get(yacySeed.NAME, "anonymous") + "/" + ys.getAddress());
